--- a/Html 1.html
+++ b/Html 1.html
@@ -6,7 +6,7 @@
 <marquee> Welcome to Maverick Group Website </marquee>
 </h1 >
 <h1 style="color:blue">
-<p> Maverick group is an Ethiopian  educational institution that give students delopment both in their spiritual and mental life.It is basically led by two brothers(Israel and Ezana Samson) and Dawit abraham.If you want more information you can visit us on our youtube channel by clicking on <a href="https://www.youtube.com/@MaverickEI/about"><button> <h1>Maverick Youtube channel</h1></button> </a href></p>
+<p> Maverick group is an Ethiopian  educational institution that give students development both in their spiritual and mental life.It is basically led by two brothers(Israel and Ezana Samson) and Dawit Abraham.If you want more information you can visit us on our youtube channel by clicking on <a href="https://www.youtube.com/@MaverickEI/about"><button> <h1>Maverick Youtube channel</h1></button> </a href></p>
 <p style="color:blue"><h1> You can also contact us by our instagram account </h1>
   <a href="https://www.instagram.com/maverick_ei_"><button><h1>@maverick_ei_</h1> </button> </a href> 
 </p>
